--- a/forms/main.html
+++ b/forms/main.html
@@ -62,7 +62,7 @@
                 />
               </div>
               <div class="offers__content">
-                <h3 class="offers__title">Карта "Базовая"</h3>
+                <h3 class="offers__title">Карта «Базовая»</h3>
                 <div class="offers__prices">
                   <div class="offers__prices-cell">
                     <div class="offers__price">60 Р.-</div>
@@ -91,7 +91,7 @@
                 />
               </div>
               <div class="offers__content">
-                <h3 class="offers__title">Карта "Оптима"</h3>
+                <h3 class="offers__title">Карта «Оптима»</h3>
                 <div class="offers__prices">
                   <div class="offers__prices-cell">
                     <div class="offers__price">90 Р.-</div>
@@ -120,7 +120,7 @@
                 />
               </div>
               <div class="offers__content">
-                <h3 class="offers__title">Карта "Платинум"</h3>
+                <h3 class="offers__title">Карта «Платинум»</h3>
                 <div class="offers__prices">
                   <div class="offers__prices-cell">
                     <div class="offers__price">490 Р.-</div>
@@ -238,7 +238,7 @@
               </ul>
             </nav>
             <ul class="socials">
-              <li class="socials__item socials__item--icon--vk">
+              <li class="socials__item socials__item--icon--tg">
                 <a href="#" class="social__link"></a>
               </li>
               <li class="socials__item socials__item--icon--vk">
