--- a/forms/main.html
+++ b/forms/main.html
@@ -168,7 +168,10 @@
               <div class="news__text-content">
                 <div class="news__date">ноябрь 2019</div>
                 <div class="news__title">Удобное мобильное приложение</div>
-                <div class="news__desc">Хороший банк хорошие условия</div>
+                <div class="news__desc">
+                  Хороший банк хорошие условия. Отдайте деньги в самый надежный
+                  банк в мире
+                </div>
               </div>
             </li>
           </ul>
@@ -220,7 +223,7 @@
       </section>
       <footer class="footer-container">
         <div class="container">
-          <div class="footer footer-container__contant">
+          <div class="footer footer-container__content">
             <a href="/forms/main.html" class="logo">
               <img src="../img/logo/logo.png" alt="logo" class="logo__pic" />
             </a>
