--- a/forms/main.html
+++ b/forms/main.html
@@ -242,7 +242,7 @@
             </nav>
             <ul class="socials">
               <li class="socials__item socials__item--icon--tg">
-                <a href="#" class="social__link"></a>
+                <a href="#" class="socials__link"></a>
               </li>
               <li class="socials__item socials__item--icon--vk">
                 <a href="#" class="socials__link"></a>
@@ -256,9 +256,9 @@
             </ul>
             <address class="contacts">
               <div class="contacts__disc">Бесплатный звонок по России</div>
-              <a href="tel: +7800700303" class="contacts__phone"
-                >8 800 700 30 30</a
-              >
+              <a href="tel: +7800700303" class="contacts__phone"></a>
+                8 800 700 30 30
+              </a>
             </address>
           </div>
         </div>
