--- a/forms/main.html
+++ b/forms/main.html
@@ -256,9 +256,9 @@
             </ul>
             <address class="contacts">
               <div class="contacts__disc">Бесплатный звонок по России</div>
-              <a href="tel: +7800700303" class="contacts__phone"></a>
-                8 800 700 30 30
-              </a>
+              <a href="tel: +7800700303" class="contacts__phone"
+                >8 800 700 30 30</a
+              >
             </address>
           </div>
         </div>
