--- a/forms/main.html
+++ b/forms/main.html
@@ -8,10 +8,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./normalize.css" />
     <title>Разметка</title>
   </head>
   <body>
-    <div class="wrapper main-padge-wrapper">
+    <div class="wrapper padge">
       <section class="hero">
         <div class="container">
           <header class="header">
@@ -20,10 +21,10 @@
             </a>
             <nav class="menu">
               <ul class="menu__list">
-                <li class="menu__item">
+                <li class="menu__item menu__item--active">
                   <a href="./main.html" class="menu__link">Главная</a>
                 </li>
-                <li class="menu__item menu__item--active">
+                <li class="menu__item">
                   <a href="./services.html" class="menu__link">Услуги</a>
                 </li>
                 <li class="menu__item">
@@ -32,7 +33,7 @@
               </ul>
             </nav>
             <address class="contacts">
-              <a href="tel: +7800700303" class="contacts__phone"
+              <a href="tel:+7800700303" class="contacts__phone"
                 >8 800 700 30 30</a
               >
               <div class="contacts__dropdown-title">График работы</div>
@@ -78,7 +79,7 @@
                   </div>
                 </div>
                 <div class="offers__btn-wrapper">
-                  <a href="#" class="btn btn--color--black" alt="">ПОДРОБНЕЕ</a>
+                  <a href="#" class="btn btn--color--black">ПОДРОБНЕЕ</a>
                 </div>
               </div>
             </li>
@@ -221,18 +222,18 @@
           </div>
         </div>
       </section>
-      <footer class="footer-container">
+      <footer class="footer">
         <div class="container">
-          <div class="footer footer-container__content">
+          <div class="footer-container footer-container__content">
             <a href="/forms/main.html" class="logo">
               <img src="../img/logo/logo.png" alt="logo" class="logo__pic" />
             </a>
             <nav class="menu">
               <ul class="menu__list">
-                <li class="menu__item">
+                <li class="menu__item menu__item--active">
                   <a href="./main.html" class="menu__link">Главная</a>
                 </li>
-                <li class="menu__item menu__item--active">
+                <li class="menu__item">
                   <a href="./services.html" class="menu__link">Услуги</a>
                 </li>
                 <li class="menu__item">
