--- a/forms/services.html
+++ b/forms/services.html
@@ -98,7 +98,7 @@
             </a>
             </li>
           </ul>
-          <div class="pager padge--theme--light">
+          <div class="pager pager--theme--light">
             <div class="pager__display">Страница 1 из 7</div>
              <ul class="pager__list">
               <li class="pager__item pager__item--active">
