--- a/forms/services.html
+++ b/forms/services.html
@@ -9,7 +9,7 @@
     />
     <title>LionBank</title>
     <link rel="stylesheet" href="./normalize.css" />
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./servises.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -47,7 +47,7 @@
               </address>
             </div>
           </header>
-              <h1 class="padge__title">Услуги</h1>
+              <h1 class="title">Услуги</h1>
               <nav class="breadcrums">
                 <ul class="breadcrums__list">
                   <il class="breadcrums__item">
@@ -67,8 +67,8 @@
           <ul class="services">
             <li class="services__item">
               <a href="#" class="service">
-              <div class="service__img">
-                <img src="../img/services/key.jpg"  class="service__img-elem" alt="">
+              <div class="service__img--wrapper">
+                <img src="../img/services/key.jpg"  class="service__img" alt="">
               </div>
               <div class="service__content">
                 <h2 class="service__title">Автокредит по 17% годовых</h2>
@@ -81,10 +81,10 @@
               </div>
             </a>
             </li>
-            <li class="services__item service">
+            <li class="services__item">
               <a href="#" class="service">
-              <div class="service__img">
-                <img src="../img/services/couple.jpg"  class="service__img-elem" alt="">
+              <div class="service__img--wrapper">
+                <img src="../img/services/couple.jpg"  class="service__img" alt="">
               </div>
               <div class="service__content">
                 <h2 class="service__title">Автокредит по 17% годовых</h2>
@@ -126,7 +126,7 @@
            </div>
         </div>
         </main>
-        <selection class="inner-selection inner-selection--bg--grey">
+        <section class="inner-section inner-section--bg--grey">
           <div class="container container--partners">
               <h2 class="inner-selection__title ">Партнеры</h2>
               <ul class="partners">
@@ -134,99 +134,84 @@
                   <a
                     href="https://yandex.ru/company/"
                     class="partners__link"
-                    target="_blank"
-                  >
+                    target="_blank">
                   <img
                   src="../img/services/yandex.png"
                   alt="ya"
-                  class="type-partners__img"
-              /></a>
+                  class="type-partners__img"/></a>
                 </li>
                 <li class="partners__items">
-                  <a href="#" class="partners__link">
+                  <a href="https://www.rambler.ru/" class="partners__link" target="_blank">
                     <img
                       src="../img/services/rambler.png"
                       alt="rambler"
-                      class="type-partners__img"
-                  />
+                      class="type-partners__img"/>
                   </a>
                 </li>
                 <li class="partners__items">
                   <a
                     href="https://www.tinkoff.ru/"
                     class="partners__link"
-                    target="_blank"
-                  >
+                    target="_blank">
                     <img
                       src="../img/services/tinkoff.png"
                       alt="tinkoff"
-                      class="type-partners__img"
-                  /></a>
+                      class="type-partners__img"/></a>
                 </li>
                 <li class="partners__items">
                   <a
                     href="https://www.sberbank.ru/"
                     class="partners__link"
-                    target="_blank"
-                  >
+                    target="_blank">
                     <img
                       src="../img/services/sberbank.png"
                       alt="sber"
-                      class="partners__img"
-                  /></a>
+                      class="partners__img"/></a>
                 </li>
                 <li class="partners__items">
                   <a
                     href="https://www.renins.ru/"
                     class="partners__link"
-                    target="_blank"
-                  >
+                    target="_blank">
                     <img
                       src="../img/services/renessans.png"
                       alt="renessans"
-                      class="partners__img"
-                  /></a>
+                      class="partners__img"/></a>
                 </li>
                 <li class="partners__items">
                   <a
                     href="https://www.vtb.ru/"
                     class="partners__link"
-                    target="_blank"
-                  >
+                    target="_blank">
                     <img
                       src="../img/services/vtb.png"
                       alt="vtb"
-                      class="partners__img"
-                  /></a>
+                      class="partners__img"/></a>
                 </li>
                 <li class="partners__items">
                   <a
                     href="https://www.vostbank.ru/"
                     class="partners__link"
-                    target="_blank"
-                  >
+                    target="_blank">
                     <img
                       src="../img/services/western.png"
                       alt="vost-bank"
-                      class="type-partners__img"
-                  /></a>
+                      class="type-partners__img" /></a>
                 </li>
                 <li class="partners__items">
                   <a
                     href="https://www.open.ru/"
                     class="partners__link"
-                    target="_blank"
-                  >
+                    target="_blank">
                     <img
                       src="../img/services/openbank.png"
                       alt="olpen-bank"
-                      class="type-partners__img"
-                  /></a>
+                      class="type-partners__img"/></a>
                 </li>
               </ul>
             </div>
           </div>
-        </selection>
+        </section>
       </main>
       <footer class="inner-footer">
         <div class="container inner-footer__container">
