--- a/forms/services.html
+++ b/forms/services.html
@@ -9,7 +9,7 @@
     />
     <title>LionBank</title>
     <link rel="stylesheet" href="./normalize.css" />
-    <link rel="stylesheet" href="./servises.css" />
+    <link rel="stylesheet" href="./second.css" />
   </head>
   <body>
     <div class="wrapper">
