--- a/forms/main.html
+++ b/forms/main.html
@@ -7,8 +7,8 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./main.css" />
     <link rel="stylesheet" href="./normalize.css" />
+    <link rel="stylesheet" href="./first.css" />
     <title>Разметка</title>
   </head>
   <body>
